# constraint-snap

./: README.md  pyproject.toml
constraint_snap/: __init__.py  snap.py
constraint_snap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_constraint_snap.py
